@@ -631,12 +631,13 @@ size, and full-buffer size."
 		  (overlay-put overlay 'face 'default)))
 	    (insert-image image (or alt "*")))
 	  (put-text-property start (point) 'image-size size)
-	  (when (if (fboundp 'image-multi-frame-p)
-		    ;; Only animate multi-frame things that specify a
-		    ;; delay; eg animated gifs as opposed to
-		    ;; multi-page tiffs.  FIXME?
-		    (cdr (image-multi-frame-p image))
-		  (image-animated-p image))
+	  (when (cond ((fboundp 'image-multi-frame-p)
+		       ;; Only animate multi-frame things that specify a
+		       ;; delay; eg animated gifs as opposed to
+		       ;; multi-page tiffs.  FIXME?
+		       (cdr (image-multi-frame-p image)))
+		      ((fboundp 'image-animated-p)
+		       (image-animated-p image)))
 	    (image-animate image nil 60)))
 	image)
     (insert alt)))
